@@ -40,6 +40,7 @@ public partial class EditLane : System.Web.UI.Page
 
 			int id;
 			int sequence;
+			int timeout;
 
 			Configuration.InitializeApp (null, "Builder.Web");
 
@@ -123,6 +124,15 @@ public partial class EditLane : System.Web.UI.Page
 						DBCommand cmd = new DBCommand (db, id);
 						cmd.arguments = Request ["arguments"];
 						cmd.Save (db);
+					}
+					break;
+				case "editCommandTimeout":
+					if (int.TryParse (command_id, out id)) {
+						if (int.TryParse (Request ["timeout"], out timeout)) {
+							DBCommand cmd = new DBCommand (db, id);
+							cmd.timeout = timeout;
+							cmd.Save (db);
+						}
 					}
 					break;
 				case "deletecommand":
@@ -265,7 +275,7 @@ ORDER BY lane_id, name ASC";
 
 
 			tblCommands.Rows.Add (Utils.CreateTableHeaderRow ("Commands"));
-			tblCommands.Rows.Add (Utils.CreateTableHeaderRow ("Sequence", "Command", "Always Execute", "Non Fatal", "Internal", "Executable", "Arguments", ""));
+			tblCommands.Rows.Add (Utils.CreateTableHeaderRow ("Sequence", "Command", "Always Execute", "Non Fatal", "Internal", "Executable", "Arguments", "Timeout", ""));
 			tblCommands.Rows [0].Cells [0].ColumnSpan = 8;
 
 			List<DBCommand> commands = lane.GetCommands (db);
@@ -278,6 +288,7 @@ ORDER BY lane_id, name ASC";
 					string.Format ("<a href='EditLane.aspx?lane_id={0}&amp;command_id={1}&amp;action=switchInternal'>{2}</a>", lane.id, command.id, (command.@internal ? "yes" : "no")),
 					string.Format ("<a href='javascript:editCommandFilename ({2}, {0}, true, \"{1}\")'>{1}</a>", command.id, command.filename, lane.id),
 					string.Format ("<a href='javascript:editCommandArguments ({2}, {0}, true, \"{1}\")'>{1}</a>", command.id, command.arguments, lane.id),
+					string.Format ("<a href='javascript:editCommandTimeout ({2}, {0}, true, \"{1}\")'>{1} minutes</a>", command.id, command.timeout, lane.id),
 					string.Format ("<a href='EditLane.aspx?lane_id={0}&amp;action=deletecommand&amp;command_id={1}'>Delete</a>", lane.id, command.id)));
 			}
 			tblCommands.Rows.Add (Utils.CreateTableRow (
